# komet

./: .cruft.json  .gitignore  .gitmodules  CONTRIBUTING.md  Makefile  README.md  flake.nix  pyproject.toml
.github/actions/with-docker/: Dockerfile
.github/workflows/: master.yml  test.yml  update.yml
docs/: tracing.md
nix/: README.md
nix/komet/: default.nix
nix/komet-pyk/: build-systems-overlay.nix  default.nix
nix/komet-source/: default.nix
package/: test-package.sh
package/test-project/: Cargo.toml
package/test-project/src/: lib.rs  test.rs
src/komet/: __main__.py  kasmer.py  komet.py  proof.py  scval.py  utils.py
src/komet/kast/: manip.py  syntax.py
src/komet/kdist/: plugin.py
src/komet/kdist/soroban-semantics/: auto-allocate.md  cheatcodes.md  configuration.md  data.md  errors.md  fs.md  json-utils.md  kasmer.md  komet-lemmas.md  soroban.md  tracing.md  wasm-ops.md
src/komet/kdist/soroban-semantics/host/: address.md  buffer.md  call.md  context.md  integer.md  ledger.md  map.md  symbol.md  vector.md
src/ksoroban/: kasmer.py  ksoroban.py  proof.py  scval.py  utils.py
src/ksoroban/kast/: syntax.py
src/ksoroban/kdist/: plugin.py
src/ksoroban/kdist/soroban-semantics/: cheatcodes.md  configuration.md  data.md  kasmer.md  ksoroban-lemmas.md  soroban.md  switch.md  wasm-ops.md
src/ksoroban/kdist/soroban-semantics/host/: context.md  hostfuns.md  integer.md  ledger.md  map.md  symbol.md
src/tests/integration/: test_integration.py
src/tests/integration/data/: add_i32.wast  add_u128.wast  add_u32.wast  add_u64.wast  buffer.wast  bytes.wast  call_add.wast  cheat_create_contract.wast  cheatcodes.wast  compare.wast  consecutive_nop.wast  double_u256.wast  errors.wast  extend_ttl.wast  get_contract_address.wast  i128.wast  i64.wast  increment.wast  increment_panic.wast  ledger_sequence_get_set.wast  map.wast  require_auth.wast  storage.wast  struct_storage.wast  structs.wast  symbol_small.wast  symbols.wast  timestamp.wast  tuple_to_vec.wast  u256.wast  update_wasm.wast  vec.wast
src/tests/integration/data/soroban/: .gitignore  Cargo.toml
src/tests/integration/data/soroban/contracts/test_adder/src/: lib.rs  test.rs
src/tests/integration/data/soroban/contracts/test_adder_fail/: Cargo.toml
src/tests/integration/data/soroban/contracts/test_bytes/: Cargo.toml
src/tests/integration/data/soroban/contracts/test_bytes/src/: lib.rs  (+1 more)
src/tests/integration/data/soroban/contracts/test_compare/: Cargo.toml
src/tests/integration/data/soroban/contracts/test_containers/: Cargo.toml
src/tests/integration/data/soroban/contracts/test_cross_contract/: Cargo.toml  README.md  kasmer.json
src/tests/integration/data/soroban/contracts/test_fxdao/: Cargo.toml  README.md  kasmer.json
src/tests/integration/data/soroban/contracts/test_hostfuns/: Cargo.toml
src/tests/integration/data/soroban/contracts/test_integers/: Cargo.toml  README.md
src/tests/integration/data/soroban/contracts/test_storage/: Cargo.toml  README.md
src/tests/integration/data/soroban/contracts/test_ttl/: Cargo.toml  README.md
src/tests/integration/data/soroban/contracts/test_valtypes/: Cargo.toml
src/tests/integration/data/soroban/contracts/valtypes/: Cargo.toml
src/tests/lemmas/: test_lemmas.py
src/tests/lemmas/specs/: int-bitwise-spec.k  test-spec.k
src/tests/unit/: test_unit.py
tests/soroban/contracts/test_adder/: Cargo.toml
(+15 files in other folders)
