[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "komet"
version = "0.1.65"
description = "K tooling for the Soroban platform"
requires-python = "~=3.10"
dependencies = [
    "pykwasm@git+https://github.com/runtimeverification/wasm-semantics.git@v0.1.126#subdirectory=pykwasm",
]

[[project.authors]]
name = "Runtime Verification, Inc."
email = "contact@runtimeverification.com"

[project.scripts]
komet = "komet.komet:main"

[project.entry-points.kdist]
soroban-semantics = "komet.kdist.plugin"

[dependency-groups]
dev = [
    'autoflake',
    'black',
    'flake8',
    'flake8-bugbear',
    'flake8-comprehensions',
    'flake8-quotes',
    'flake8-type-checking',
    'isort',
    'mypy',
    'pep8-naming',
    'pytest',
    'pytest-cov',
    'pytest-mock',
    'pytest-xdist',
    'pyupgrade',
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.isort]
profile = "black"
line_length = 120

[tool.autoflake]
recursive = true
expand-star-imports = true
remove-all-unused-imports = true
ignore-init-module-imports = true
remove-duplicate-keys = true
remove-unused-variables = true

[tool.black]
line-length = 120
skip-string-normalization = true

[tool.mypy]
disallow_untyped_defs = true
